# domino

./: .gitignore  .gitmodules  build_ghcjs  default.nix  domino.cabal  release.nix  stack.yaml
ghcjs/: README.md  client.nix  default.nix  dlist-0.7.1.2.nix  dlist-0.8.0.2.nix  ghcjs.cabal  lucid.nix  servant-lucid.nix  stack.yaml
ghcjs/app/: @  Create.hs
ghcjs/src/: ClientAPI.hs  CreateWidget.hs  Shared
scripts/database/: create-tables.sql
src/: @  AWS.hs  Api.hs  App.hs  Asciify.hs  Constants.hs  Domino.hs  DoubleSix.hs  Filters.hs  Image.hs  Main.hs  Puzzle.hs  Site.hs  SnapUtil.hs
src/Domino/: DoubleSix.hs
src/Domino/DoubleSix/: Stats.hs
src/Image/: Generation.hs
src/Shared/: Api.hs  Image.hs
src/Shared/Domino/: DoubleSix.hs
src/Shared/Domino/DoubleSix/: Stats.hs
src/Snap/Snaplet/: @  AWS.hs
static/ghcjs/: create.js
