Name:                domino
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable domino
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
                adjunctions,
                aeson,
                amazonka,
                amazonka-core,
                amazonka-s3,
                amazonka-ses,
                base,
                bytestring,
                classy-prelude,
                conduit,
                conduit-extra,
                filepath,
                JuicyPixels,
                lens,
                lucid,
--                MonadCatchIO-transformers,
                mtl,
                postgresql-simple,
                pretty,
                resourcet,
                servant >= 0.7,
                servant-lucid,
                servant-server,
                text,
                vector,
                wai,
                warp,
                wreq

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
