name:                ghcjs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ghcjs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     CreateWidget
  build-depends:       base
                     , aeson
                     , containers
                     , classy-prelude
                     , ghcjs-base
                     , ghcjs-dom
                     , lens
                     , reflex
                     , reflex-dom
                     , servant
                     , servant-reflex
  default-language:    Haskell2010

executable create
  hs-source-dirs:      app
  main-is:             Create.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ghcjs
